--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -50,6 +50,9 @@
   "manageYourBusiness": "உங்கள் வியாபாரத்தை நிர்வகியுங்கள்",
   "storeViews": "கடை பார்வைகள்",
   "sales": "விற்பனைகள்",
+  "monthlyOrders": "மாதாந்திர ஆர்டர்கள்",
+  "totalOrders": "மொத்த ஆர்டர்கள்",
+  "totalRevenue": "மொத்த வருவாய்",
   "translatePage": "பக்கத்தை மொழிபெயர்க்க",
   "selectProductBelowToRemove": "கீழே bulunan பொருளை அகற்றத் தேர்ந்தெடுக்கவும்.",
   "switchToOriginalImage": "மூல படத்திற்கு மாற்று",
