--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -6,7 +6,7 @@
   "analytics": "பகுப்பாய்வு",
   "products": "பொருட்கள்",
   "orders": "ஆர்டர்கள்",
-  "myStore": "என் கடை",
+  "myStore": "எனது கடை",
   "addProduct": "பொருள் சேர்க்க",
   "addProducts": "பொருட்களை சேர்க்கவும்",
   "removeProducts": "பொருட்களை அகற்றவும்",
@@ -37,7 +37,7 @@
   "errorLoadingProducts": "பொருட்களை ஏற்றுவதில் பிழை: {error}",
   "home": "முகப்பு",
   "artisanLegacy": "கலைஞர் மரபு",
-  "collaborations": "கூட்டுத்தொழி",
+  "collaborations": "ஒத்துழைப்புகள்",
   "requests": "கோரிக்கைகள்",
   "pleaseLogIn": "தயவுசெய்து உள்நுழையவும்.",
   "selectLanguage": "உங்கள் விருப்பமான மொழியைத் தேர்ந்தெடுக்கவும். இந்தப் பக்கத்தில் உள்ள உரை உங்களுக்காக மொழிபெயர்க்கப்படும்.",
@@ -49,7 +49,7 @@
   "quickActions": "வக்கமான செயல்கள்",
   "manageYourBusiness": "உங்கள் வியாபாரத்தை நிர்வகியுங்கள்",
   "storeViews": "கடை பார்வைகள்",
-  "sales": "விற்பனைகள்",
+  "monthlySales": "மாத விற்பனை",
   "monthlyOrders": "மாதாந்திர ஆர்டர்கள்",
   "totalOrders": "மொத்த ஆர்டர்கள்",
   "totalRevenue": "மொத்த வருவாய்",
