translated add product

--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -375,5 +375,192 @@
   "errorOpeningProductManagement": "उत्पाद प्रबंधन खोलने में त्रुटि",
   "@errorOpeningProductManagement": {
     "description": "Error message when product management screen fails to open"
-  }
+  },
+  "addProductListing": "उत्पाद सूची जोड़ें",
+  "editProductListing": "उत्पाद सूची संपादित करें",
+  "selectImages": "चित्र चुनें",
+  "selectVideo": "वीडियो चुनें", 
+  "aiAnalysis": "AI विश्लेषण",
+  "analyzeWithAI": "AI के साथ विश्लेषण करें",
+  "maxImagesAllowed": "अधिकतम {count} चित्र की अनुमति है। पहले {count} चित्र चुने गए।",
+  "imageNotFound": "चित्र {index} नहीं मिला।",
+  "imageTooLarge": "चित्र {index} बहुत बड़ा है (अधिकतम 10MB)।",
+  "imageUnsupportedFormat": "चित्र {index} का असमर्थित प्रारूप।",
+  "errorProcessingImage": "चित्र {index} प्रसंस्करण में त्रुटि: {error}",
+  "noValidImagesSelected": "कोई वैध चित्र नहीं चुना गया।",
+  "imagesSelectedSuccessfully": "{count} चित्र सफलतापूर्वक चुने गए!",
+  "errorSelectingImages": "चित्र चुनने में त्रुटि: {error}",
+  "pleaseSelectImagesOrVideo": "कृपया पहले चित्र या वीडियो चुनें",
+  "aiAnalysisComplete": "✨ AI विश्लेषण पूर्ण! उत्पाद विवरण स्वचालित रूप से भरा गया।",
+  "errorAnalyzingProduct": "उत्पाद विश्लेषण में त्रुटि: {error}",
+  "imageUploadedSuccessfully": "✅ चित्र सफलतापूर्वक अपलोड हुआ!",
+  "errorUploadingImage": "❌ चित्र अपलोड करने में त्रुटि: {error}",
+  "enterEditDescription": "कृपया बताएं कि आप चित्र को कैसे संपादित करना चाहते हैं",
+  "selectOrUploadImageFirst": "कृपया पहले चित्र चुनें या अपलोड करें",
+  "errorEditingImage": "❌ चित्र संपादन में त्रुटि: {error}",
+  "textEditingUnavailable": "⚠️ टेक्स्ट-आधारित संपादन अस्थायी रूप से अनुपलब्ध है। मूल चित्र का उपयोग कर रहे हैं।",
+  "imageEditedSuccessfully": "✨ चित्र संपादित और सफलतापूर्वक अपलोड हुआ!",
+  "productName": "उत्पाद नाम",
+  "enterProductName": "उत्पाद नाम दर्ज करें",
+  "productNameRequired": "उत्पाद नाम आवश्यक है",
+  "price": "मूल्य",
+  "enterPrice": "₹ में मूल्य दर्ज करें",
+  "priceRequired": "मूल्य आवश्यक है",
+  "enterValidPrice": "कृपया वैध मूल्य दर्ज करें",
+  "stockQuantity": "स्टॉक मात्रा",
+  "enterStockQuantity": "उपलब्ध स्टॉक दर्ज करें",
+  "stockRequired": "स्टॉक मात्रा आवश्यक है",
+  "enterValidStock": "कृपया वैध स्टॉक मात्रा दर्ज करें",
+  "description": "विवरण",
+  "enterDescription": "अपने उत्पाद का विस्तार से वर्णन करें...",
+  "descriptionRequired": "विवरण आवश्यक है",
+  "category": "श्रेणी",
+  "selectCategory": "श्रेणी चुनें",
+  "materials": "सामग्री",
+  "enterMaterials": "जैसे, लकड़ी, मिट्टी, धातु (कॉमा से अलग)",
+  "dimensions": "आयाम",
+  "enterDimensions": "जैसे, 10सेमी x 15सेमी x 5सेमी",
+  "craftingTime": "निर्माण समय",
+  "enterCraftingTime": "जैसे, 2-3 सप्ताह",
+  "careInstructions": "देखभाल निर्देश",
+  "enterCareInstructions": "इस उत्पाद की देखभाल और रखरखाव कैसे करें...",
+  "pottery": "मिट्टी के बर्तन",
+  "jewelry": "आभूषण",
+  "textiles": "वस्त्र",
+  "woodwork": "लकड़ी का काम",
+  "metalwork": "धातु का काम",
+  "leatherGoods": "चमड़े का सामान",
+  "glassArt": "कांच की कला",
+  "stoneCarving": "पत्थर की नक्काशी",
+  "basketry": "टोकरी बनाना",
+  "ceramics": "मिट्टी के बर्तन",
+  "sculpture": "मूर्तिकला",
+  "other": "अन्य",
+  "createProduct": "उत्पाद बनाएं",
+  "updateProduct": "उत्पाद अपडेट करें",
+  "creatingProduct": "उत्पाद सूची बना रहे हैं...",
+  "updatingProduct": "उत्पाद अपडेट कर रहे हैं...",
+  "productCreatedSuccessfully": "🎉 उत्पाद \"{productName}\" सफलतापूর्वक सूचीबद्ध हुआ!",
+  "productUpdatedSuccessfully2": "🎉 उत्पाद \"{productName}\" सफलतापूर्वक अपडेट हुआ!"
+  ,
+  "optionalAddMediaForAI": "वैकल्पिक: AI विश्लेषण सुविधाएँ सक्षम करने के लिए चित्र या वीडियो जोड़ें",
+  "imageRemoved": "चित्र हटाया गया",
+  "photosSummaryEdit": "{total} चित्र ({existing} मौजूदा, {added} नए)",
+  "photosSelected": "{count} चित्र चुने गए",
+  "clearNew": "नए हटाएँ",
+  "current": "वर्तमान",
+  "newVideoSelected": "नया वीडियो चुना गया",
+  "currentVideo": "वर्तमान वीडियो",
+  "videoSelected": "वीडियो चुना गया",
+  "analyzingVideo": "वीडियो का विश्लेषण हो रहा है...",
+  "analyzed": "विश्लेषित",
+  "existingVideo": "मौजूदा वीडियो",
+  "aiProductAnalysis": "AI उत्पाद विश्लेषण",
+  "aiUploadMediaHint": "वैकल्पिक: मीडिया अपलोड करें और हमारा AI स्वतः उच्च सटीकता के साथ उत्पाद विवरण भर देगा।",
+  "analysisCompleteFilled": "विश्लेषण पूरा! फ़ॉर्म फ़ील्ड स्वतः भर दिए गए हैं।",
+  "aiEnhancements": "AI संवर्धन",
+  "titleOptions": "शीर्षक विकल्प:",
+  "optionsCount": "{count} विकल्प",
+  "useThis": "इसे उपयोग करें",
+  "descriptionOptions": "विवरण विकल्प:",
+  "optionLuxuryTitle": "विकल्प 1: विलासिता और आकर्षण",
+  "optionPersonalTitle": "विकल्प 2: व्यक्तिगत और भावनात्मक",
+  "wordsCount": "{count} शब्द",
+  "luxuryDescriptionApplied": "✨ विलासिता वाला विवरण लागू हुआ!",
+  "personalDescriptionApplied": "✨ व्यक्तिगत विवरण लागू हुआ!",
+  "aiPriceAnalysis": "AI मूल्य विश्लेषण:",
+  "marketPositionLabel": "बाजार स्थिति: {value}",
+  "suggestedRange": "सुझाया गया दायरा: {min} - {max}",
+  "productDetails": "उत्पाद विवरण",
+  "describeProductOrRecord": "अपने उत्पाद का विस्तार से वर्णन करें, या नीचे अपनी कहानी रिकॉर्ड करें!",
+  "addAudioStory": "ऑडियो कहानी जोड़ें",
+  "recordYourStory": "अपनी कहानी रिकॉर्ड करें",
+  "audioStoryReady": "ऑडियो कहानी तैयार",
+  "preview": "पूर्वावलोकन",
+  "stockMinOne": "स्टॉक मात्रा कम से कम 1 होनी चाहिए"
+  ,
+  "editAudioStory": "ऑडियो कहानी संपादित करें",
+  "audioRecordingReady": "ऑडियो रिकॉर्डिंग तैयार",
+  "editTranscription": "ट्रांसक्रिप्शन संपादित करें:",
+  "saveChanges": "परिवर्तन सहेजें",
+  "noAudioStoryToPreview": "पूर्वावलोकन के लिए कोई ऑडियो कहानी उपलब्ध नहीं",
+  "noAudioStoryToEdit": "संपादन के लिए कोई ऑडियो कहानी उपलब्ध नहीं",
+  "deleteAudioStory": "ऑडियो कहानी हटाएं",
+  "areYouSureDeleteAudioStory": "क्या आप वाकई इस ऑडियो कहानी को हटाना चाहते हैं? यह क्रिया पूर्ववत नहीं की जा सकती।",
+  "uploadingAudioStory": "ऑडियो कहानी अपलोड हो रही है...",
+  "audioStoryUploadFailedWarning": "चेतावनी: ऑडियो कहानी अपलोड विफल।",
+  "downloadingAiImage": "💾 AI द्वारा निर्मित छवि डाउनलोड हो रही है...",
+  "aiImageSavedSuccessfully": "✅ AI द्वारा निर्मित छवि गैलरी में सफलतापूर्वक सहेजी गई!",
+  "failedToDownloadImage": "छवि डाउनलोड करने में विफल",
+  "galleryPermissionDeniedAppSettings": "गैलरी एक्सेस की अनुमति अस्वीकार की गई। कृपया ऐप सेटिंग्स में अनुमति दें।",
+  "storageSpaceInsufficient": "छवि सहेजने के लिए पर्याप्त स्टोरेज उपलब्ध नहीं।",
+  "imageFormatNotSupportedSimple": "छवि प्रारूप समर्थित नहीं है।",
+  "failedToLoadAiImage": "AI छवि लोड करने में विफल",
+  "failedToLoadImage": "छवि लोड करने में विफल",
+  "invalidImageFormat": "अमान्य छवि प्रारूप",
+  "differentProductsDetectedSnack": "❌ अलग-अलग उत्पाद पाए गए! कृपया केवल उसी उत्पाद की छवियां अपलोड करें।",
+  "aiAnalysisFailedTryClearer": "🤖 AI विश्लेषण विफल। कृपया स्पष्ट और अच्छी रोशनी वाली छवियों के साथ फिर से प्रयास करें।",
+  "technicalErrorTryAgain": "⚙️ तकनीकी त्रुटि। कृपया पुनः प्रयास करें या सहायता से संपर्क करें।",
+  "differentProductsDetectedTitle": "अलग-अलग उत्पाद पाए गए",
+  "differentProductsDetectedIntro": "हमारे AI ने पाया कि आपकी छवियों में अलग-अलग उत्पाद दिख रहे हैं। सटीक विश्लेषण के लिए कृपया:",
+  "uploadGuidelinesTitle": "✅ अपलोड दिशानिर्देश:",
+  "uploadGuidelineSameProduct": "उसी उत्पाद की कई छवियां",
+  "uploadGuidelineDifferentAngles": "एक ही वस्तु के अलग-अलग कोण/दृश्य",
+  "uploadGuidelineCloseUp": "उसी उत्पाद के क्लोज़-अप विवरण",
+  "uploadGuidelineLighting": "एक ही वस्तु अलग-अलग रोशनी में",
+  "avoidTheseTitle": "❌ इन्हें न करें:",
+  "avoidMixDifferentProducts": "अलग-अलग उत्पादों की छवियां मिक्स न करें",
+  "avoidIncludeComparisonImages": "तुलना वाली छवियां शामिल न करें",
+  "avoidMixCategories": "उत्पाद श्रेणियां मिक्स न करें",
+  "tipTitle": "💡 सुझाव:",
+  "tipBody": "हमारा AI बहुत सटीक है। यदि आपको लगता है कि ये छवियां एक ही उत्पाद की हैं, तो स्पष्ट फोटो लें, समान रोशनी रखें और सभी मुख्य फीचर्स दिखें यह सुनिश्चित करें।",
+  "gotIt": "समझ गया",
+  "selectNewImages": "नई छवियां चुनें",
+  "failedToUploadAiEnhancedImage": "❌ AI-संवर्धित छवि अपलोड करने में विफल: {error}",
+  "permissionDeniedCheckAccount": "अनुमति अस्वीकृत। कृपया अपने खाते की अनुमतियां जांचें।",
+  "storageQuotaExceededContactSupport": "स्टोरेज कोटा पार हो गया। कृपया सहायता से संपर्क करें।",
+  "deletingAudioStory": "ऑडियो कहानी हटाई जा रही है...",
+  "allowedImageFormatsJpgPngWebp": "कृपया केवल JPG, PNG या WebP छवि प्रारूप का उपयोग करें।",
+  "selectBuyerDisplayImage": "खरीदार प्रदर्शन छवि चुनें",
+  "chooseImageForMarketplace": "एक ऐसी छवि चुनें जो मार्केटप्लेस पर खरीदारों को दिखाई जाएगी:",
+  "selectFromUploadedImages": "अपलोड की गई छवियों में से चुनें:",
+  "selectedBuyerDisplayImage": "चयनित प्रदर्शन छवि:",
+  "aiGeneratedBuyerDisplayImage": "AI द्वारा बनाई गई प्रदर्शन छवि:",
+  "save": "सहेजें",
+  "tapToSelectThisAiImage": "इस AI-संवर्धित छवि को चुनने के लिए टैप करें",
+  "aiImageSelectedForProduct": "✨ आपके उत्पाद के लिए AI-संवर्धित छवि चुनी गई!",
+  "aiImageSelectedCheck": "✓ AI छवि चुनी गई",
+  "useAiEnhancedImage": "AI-संवर्धित छवि का उपयोग करें",
+  "uploadingEllipsis": "अपलोड हो रहा है...",
+  "uploadDisplayImage": "प्रदर्शन छवि अपलोड करें",
+  "uploadDifferentImage": "अलग छवि अपलोड करें",
+  "textBasedImageEditing": "✨ टेक्स्ट-आधारित छवि संपादन",
+  "describeHowToModifyImage": "प्राकृतिक भाषा का उपयोग करके बताएं कि आप अपनी छवि को कैसे संशोधित करना चाहते हैं:",
+  "promptHintExamples": "उदा., \"पृष्ठभूमि को और अधिक उज्ज्वल और पेशेवर बनाएं\" या \"उत्पाद को दिखाने के लिए बेहतर प्रकाश जोड़ें\"",
+  "promptChipProfessionalLighting": "पेशेवर प्रकाश",
+  "promptChipBrighterBackground": "अधिक उज्ज्वल पृष्ठभूमि",
+  "promptChipMoreVibrantColors": "अधिक जीवंत रंग",
+  "promptChipRemoveDistractions": "विचलन हटाएं",
+  "promptChipStudioQuality": "स्टूडियो गुणवत्ता",
+  "applyingChanges": "परिवर्तन लागू हो रहे हैं...",
+  "applyTextBasedEditing": "टेक्स्ट-आधारित संपादन लागू करें",
+  "tipBeSpecificForAI": "आप क्या बदलना चाहते हैं, इसके बारे में स्पष्ट रहें। AI स्पष्ट और वर्णनात्मक निर्देशों के साथ सबसे अच्छा काम करता है।",
+  "infoSelectUploadedOrDifferentIfSkipFirst": "अपनी अपलोड की गई छवियों में से एक चुनें या अलग छवि अपलोड करें। यदि आप छोड़ते हैं, तो पहली अपलोड की गई छवि का उपयोग किया जाएगा।",
+  "infoThisWillBeMainDisplay": "यह छवि खरीदारों के लिए मुख्य प्रदर्शन छवि होगी। यदि आप अपनी अपलोड की गई छवियों का उपयोग करना चाहते हैं, तो आप इसे छोड़ सकते हैं।",
+  "skipAndContinue": "छोड़ें और जारी रखें",
+  "listProduct": "उत्पाद सूचीबद्ध करें",
+  "audioStoryDeletedSuccessfully": "ऑडियो कहानी सफलतापूर्वक हटाई गई!",
+  "enhancementStyle": "🎨 संवर्धन शैली:",
+  "enhancementStyleProfessional": "💼 पेशेवर",
+  "enhancementStyleVibrant": "🌈 जीवंत",
+  "enhancementStyleMinimalist": "✨ सरल",
+  "enhancementStyleLifestyle": "🏠 जीवनशैली",
+  "enhanceWithAiNanoBanana": "🍌 AI के साथ संवर्धित करें (Nano-Banana)",
+  "processingWithBanana": "🍌 प्रसंस्करण हो रहा है...",
+  "aiEnhanceImageInfo": "यह पेशेवर मार्केटप्लेस प्रदर्शन के लिए AI का उपयोग करके आपकी छवि को बेहतर बनाएगा",
+  "productUpdatedLiveMessage": "आपका उत्पाद अपडेट हो गया है और परिवर्तन अब मार्केटप्लेस पर लाइव हैं!",
+  "productNowLiveMessage": "आपका उत्पाद अब मार्केटप्लेस पर लाइव है और खरीदारों द्वारा खोजा जा सकता है!",
+  "viewMyProducts": "मेरे उत्पाद देखें",
+  "createAnother": "एक और बनाएं",
+  "done": "हो गया"
 }
