--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -46,7 +46,7 @@
   "pageLanguage": "பக்க மொழி",
   "activeOrdersCount": "உங்களிடம் {count} செயலில் உள்ள ஆர்டர்கள் உள்ளன."
   ,
-  "quickActions": "வக்கமான செயல்கள்",
+  "quickActions": "விரைவு செயல்கள்",
   "manageYourBusiness": "உங்கள் வியாபாரத்தை நிர்வகியுங்கள்",
   "storeViews": "கடை பார்வைகள்",
   "sales": "விற்பனைகள்",
@@ -54,7 +54,7 @@
   "totalOrders": "மொத்த ஆர்டர்கள்",
   "totalRevenue": "மொத்த வருவாய்",
   "translatePage": "பக்கத்தை மொழிபெயர்க்க",
-  "selectProductBelowToRemove": "கீழே bulunan பொருளை அகற்றத் தேர்ந்தெடுக்கவும்.",
+  "selectProductBelowToRemove": "கீழே உள்ள பொருளை அகற்றத் தேர்ந்தெடுக்கவும்.",
   "switchToOriginalImage": "மூல படத்திற்கு மாற்று",
   "switchToAiEnhancedImage": "AI மேம்பட்ட படத்திற்கு மாற்று"
   ,
@@ -77,5 +77,192 @@
   "productUpdatedSuccessfully": "பொருள் வெற்றிகரமாக புதுப்பிக்கப்பட்டது!",
   "defaultStoreName": "கடை - 1",
   "noName": "பெயர் இல்லை",
-  "errorOpeningProductManagement": "பொருள் மேலாண்மையை திறப்பதில் பிழை"
+  "errorOpeningProductManagement": "பொருள் மேலாண்மையை திறப்பதில் பிழை",
+  "addProductListing": "பொருள் பட்டியல் சேர்",
+  "editProductListing": "பொருள் பட்டியல் திருத்து",
+  "selectImages": "படங்கள்",
+  "selectVideo": "வீடியோ",
+  "aiAnalysis": "AI பகுப்பாய்வு",
+  "analyzeWithAI": "AI உடன் பகுப்பாய்வு செய்",
+  "maxImagesAllowed": "அதிகபட்சம் {count} படங்கள் அனுமதிக்கப்படுகின்றன. முதல் {count} படங்கள் தேர்ந்தெடுக்கப்பட்டன.",
+  "imageNotFound": "படம் {index} கண்டுபிடிக்க முடியவில்லை.",
+  "imageTooLarge": "படம் {index} மிகவும் பெரியது (அதிகபட்சம் 10MB).",
+  "imageUnsupportedFormat": "படம் {index} ஆதரிக்கப்படாத வடிவம்.",
+  "errorProcessingImage": "படம் {index} செயலாக்குவதில் பிழை: {error}",
+  "noValidImagesSelected": "செல்லுபடியாகும் படங்கள் எதுவும் தேர்ந்தெடுக்கப்படவில்லை.",
+  "imagesSelectedSuccessfully": "{count} படங்கள் வெற்றிகரமாக தேர்ந்தெடுக்கப்பட்டன!",
+  "errorSelectingImages": "படங்களைத் தேர்ந்தெடுப்பதில் பிழை: {error}",
+  "pleaseSelectImagesOrVideo": "முதலில் படங்கள் அல்லது வீடியோவைத் தேர்ந்தெடுக்கவும்",
+  "aiAnalysisComplete": "✨ AI பகுப்பாய்வு முடிந்தது! பொருள் விவரங்கள் தானாக நிரப்பப்பட்டன.",
+  "errorAnalyzingProduct": "பொருளை பகுப்பாய்வு செய்வதில் பிழை: {error}",
+  "imageUploadedSuccessfully": "✅ படம் வெற்றிகரமாக பதிவேற்றப்பட்டது!",
+  "errorUploadingImage": "❌ படம் பதிவேற்றுவதில் பிழை: {error}",
+  "enterEditDescription": "படத்தை எவ்வாறு திருத்த விரும்புகிறீர்கள் என்பதற்கான விளக்கத்தை உள்ளிடவும்",
+  "selectOrUploadImageFirst": "முதலில் படத்தைத் தேர்ந்தெடுக்கவும் அல்லது பதிவேற்றவும்",
+  "errorEditingImage": "❌ படத்தைத் திருத்துவதில் பிழை: {error}",
+  "textEditingUnavailable": "⚠️ உரை அடிப்படையிலான திருத்தம் தற்காலிகமாக கிடைக்கவில்லை. மூல படத்தைப் பயன்படுத்துகிறது.",
+  "imageEditedSuccessfully": "✨ படம் திருத்தப்பட்டு வெற்றிகரமாக பதிவேற்றப்பட்டது!",
+  "productName": "பொருளின் பெயர்",
+  "enterProductName": "பொருளின் பெயரை உள்ளிடவும்",
+  "productNameRequired": "பொருளின் பெயர் அவசியம்",
+  "price": "விலை",
+  "enterPrice": "₹ இல் விலையை உள்ளிடவும்",
+  "priceRequired": "விலை அவசியம்",
+  "enterValidPrice": "செல்லுபடியான விலையை உள்ளிடவும்",
+  "stockQuantity": "சரக்கு அளவு",
+  "enterStockQuantity": "கிடைக்கும் சரக்கை உள்ளிடவும்",
+  "stockRequired": "சரக்கு அளவு அவசியம்",
+  "enterValidStock": "செல்லுபடியான சரக்கு அளவை உள்ளிடவும்",
+  "description": "விளக்கம்",
+  "enterDescription": "உங்கள் பொருளை விரிவாக விவரிக்கவும்...",
+  "descriptionRequired": "விளக்கம் அவசியம்",
+  "category": "வகை",
+  "selectCategory": "வகையைத் தேர்ந்தெடுக்கவும்",
+  "materials": "பொருட்கள்",
+  "enterMaterials": "உ.மா., மரம், களிமண், உலோகம் (கமா பிரிக்கப்பட்ட)",
+  "dimensions": "பரிமாணங்கள்",
+  "enterDimensions": "உ.மா., 10செ.மீ x 15செ.மீ x 5செ.மீ",
+  "craftingTime": "தயாரிப்பு நேரம்",
+  "enterCraftingTime": "உ.மா., 2-3 வாரங்கள்",
+  "careInstructions": "கவனிப்பு வழிமுறைகள்",
+  "enterCareInstructions": "இந்த பொருளை எவ்வாறு பராமரிக்க வேண்டும்...",
+  "pottery": "மட்பாண்டம்",
+  "jewelry": "நகைகள்",
+  "textiles": "நெசவுகள்",
+  "woodwork": "மரவேலை",
+  "metalwork": "உலோக வேலை",
+  "leatherGoods": "தோல் பொருட்கள்",
+  "glassArt": "கண்ணாடி கலை",
+  "stoneCarving": "கல் செதுக்கல்",
+  "basketry": "கூடை வேலை",
+  "ceramics": "பீங்கான்",
+  "sculpture": "சிற்பம்",
+  "other": "மற்றவை",
+  "createProduct": "பொருளை உருவாக்கு",
+  "updateProduct": "பொருளை புதுப்பிக்கு",
+  "creatingProduct": "பொருள் பட்டியலை உருவாக்குகிறது...",
+  "updatingProduct": "பொருளை புதுப்பிக்கிறது...",
+  "productCreatedSuccessfully": "🎉 பொருள் \"{productName}\" வெற்றிகரமாக பட்டியலிடப்பட்டது!",
+  "productUpdatedSuccessfully2": "🎉 பொருள் \"{productName}\" வெற்றிகரமாக புதுப்பிக்கப்பட்டது!"
+  ,
+  "optionalAddMediaForAI": "விருப்பத்தேர்வு: AI பகுப்பாய்வு அம்சங்களை இயலுமைப்படுத்த படங்கள் அல்லது வீடியோவைச் சேர்க்கவும்",
+  "imageRemoved": "படம் அகற்றப்பட்டது",
+  "photosSummaryEdit": "{total} படங்கள் ({existing} இருப்பவை, {added} புதியவை)",
+  "photosSelected": "{count} படங்கள் தேர்ந்தெடுக்கப்பட்டன",
+  "clearNew": "புதியதை நீக்கு",
+  "current": "தற்போதைய",
+  "newVideoSelected": "புதிய வீடியோ தேர்ந்தெடுக்கப்பட்டது",
+  "currentVideo": "தற்போதைய வீடியோ",
+  "videoSelected": "வீடியோ தேர்ந்தெடுக்கப்பட்டது",
+  "analyzingVideo": "வீடியோ பகுப்பாய்வு நடக்கிறது...",
+  "analyzed": "பகுப்பாய்வு முடிந்தது",
+  "existingVideo": "இருப்பில் உள்ள வீடியோ",
+  "aiProductAnalysis": "AI பொருள் பகுப்பாய்வு",
+  "aiUploadMediaHint": "விருப்பத்தேர்வு: ஊடகங்களைப் பதிவேற்றுங்கள்; எங்கள் AI தானாகவே பொருள் விவரங்களை நிரப்பும்.",
+  "analysisCompleteFilled": "பகுப்பாய்வு முடிந்தது! படிவ புலங்கள் தானாக நிரப்பப்பட்டுள்ளன.",
+  "aiEnhancements": "AI மேம்பாடுகள்",
+  "titleOptions": "தலைப்பு விருப்பங்கள்:",
+  "optionsCount": "{count} விருப்பங்கள்",
+  "useThis": "இதையைப் பயன்படுத்து",
+  "descriptionOptions": "விளக்கம் விருப்பங்கள்:",
+  "optionLuxuryTitle": "விருப்பு 1: ஆடம்பரம் & அழகு",
+  "optionPersonalTitle": "விருப்பு 2: தனிப்பட்ட & உணர்ச்சி",
+  "wordsCount": "{count} சொற்கள்",
+  "luxuryDescriptionApplied": "✨ ஆடம்பர விளக்கம் பயன்படுத்தப்பட்டது!",
+  "personalDescriptionApplied": "✨ தனிப்பட்ட விளக்கம் பயன்படுத்தப்பட்டது!",
+  "aiPriceAnalysis": "AI விலை பகுப்பாய்வு:",
+  "marketPositionLabel": "சந்தை நிலை: {value}",
+  "suggestedRange": "பரிந்துரைக்கப்பட்ட வரம்பு: {min} - {max}",
+  "productDetails": "பொருள் விவரங்கள்",
+  "describeProductOrRecord": "உங்கள் பொருளை விரிவாக விவரிக்கவும் அல்லது கீழே உங்கள் கதையை பதிவு செய்யவும்!",
+  "addAudioStory": "ஆடியோ கதையைச் சேர்",
+  "recordYourStory": "உங்கள் கதையை பதிவு செய்யவும்",
+  "audioStoryReady": "ஆடியோ கதை தயார்",
+  "preview": "முன்னோட்டம்",
+  "stockMinOne": "சரக்கு அளவு குறைந்தபட்சம் 1 ஆக இருக்க வேண்டும்"
+  ,
+  "editAudioStory": "ஆடியோ கதையைத் திருத்து",
+  "audioRecordingReady": "ஆடியோ பதிவு தயார்",
+  "editTranscription": "உரை மாற்றத்தை திருத்தவும்:",
+  "saveChanges": "மாற்றங்களைச் சேமிக்கவும்",
+  "noAudioStoryToPreview": "முன்னோட்டத்திற்கு ஆடியோ கதை இல்லை",
+  "noAudioStoryToEdit": "திருத்த ஆடியோ கதை கிடைக்கவில்லை",
+  "deleteAudioStory": "ஆடியோ கதையை நீக்கு",
+  "areYouSureDeleteAudioStory": "இந்த ஆடியோ கதையை நீக்க விரும்புகிறீர்களா? இந்த செயலை மீட்டெடுக்க முடியாது.",
+  "uploadingAudioStory": "ஆடியோ கதை பதிவேற்றப்படுகிறது...",
+  "audioStoryUploadFailedWarning": "எச்சரிக்கை: ஆடியோ கதை பதிவேற்றம் தோல்வியடைந்தது.",
+  "downloadingAiImage": "💾 AI உருவாக்கிய படத்தை பதிவிறக்குகிறது...",
+  "aiImageSavedSuccessfully": "✅ AI உருவாக்கிய படம் கேலரியில் வெற்றிகரமாக சேமிக்கப்பட்டது!",
+  "failedToDownloadImage": "படத்தை பதிவிறக்க முடியவில்லை",
+  "galleryPermissionDeniedAppSettings": "கேலரிக்கு அணுக அனுமதி மறுக்கப்பட்டது. பயன்பாட்டின் அமைப்புகளில் அனுமதி வழங்கவும்.",
+  "storageSpaceInsufficient": "படத்தை சேமிக்க போதிய இடம் இல்லை.",
+  "imageFormatNotSupportedSimple": "பட வடிவம் ஆதரிக்கப்படவில்லை.",
+  "failedToLoadAiImage": "AI படத்தை ஏற்ற முடியவில்லை",
+  "failedToLoadImage": "படத்தை ஏற்ற முடியவில்லை",
+  "invalidImageFormat": "தவறான பட வடிவம்",
+  "differentProductsDetectedSnack": "❌ வேறு பொருட்கள் கண்டறியப்பட்டன! அதே பொருளின் படங்களையே பதிவேற்றவும்.",
+  "aiAnalysisFailedTryClearer": "🤖 AI பகுப்பாய்வு தோல்வியடைந்தது. தயவுசெய்து தெளிவான, நல்ல ஒளியுள்ள படங்களுடன் மீண்டும் முயற்சிக்கவும்.",
+  "technicalErrorTryAgain": "⚙️ தொழில்நுட்ப பிழை. மீண்டும் முயற்சிக்கவும் அல்லது ஆதரவுடன் தொடர்புகொள்ளவும்.",
+  "differentProductsDetectedTitle": "வேறு பொருட்கள் கண்டறியப்பட்டன",
+  "differentProductsDetectedIntro": "உங்கள் படங்களில் வேறு பொருட்கள் இருப்பதாக எங்கள் AI கண்டறிந்தது. துல்லியமான பகுப்பாய்வுக்காக தயவுசெய்து:",
+  "uploadGuidelinesTitle": "✅ பதிவேற்ற வழிகாட்டிகள்:",
+  "uploadGuidelineSameProduct": "அதே பொருளின் பல படங்கள்",
+  "uploadGuidelineDifferentAngles": "ஒரே பொருளின் பல கோணங்கள் அல்லது பார்வைகள்",
+  "uploadGuidelineCloseUp": "அதே பொருளின் நெருக்கமான விவரங்கள்",
+  "uploadGuidelineLighting": "ஒளி மாறுபாட்டில் அதே பொருள்",
+  "avoidTheseTitle": "❌ இவைகளை தவிர்க்கவும்:",
+  "avoidMixDifferentProducts": "வேறு பொருட்களின் படங்களை கலக்க வேண்டாம்",
+  "avoidIncludeComparisonImages": "ஒப்பீட்டு படங்களை சேர்க்க வேண்டாம்",
+  "avoidMixCategories": "பொருள் வகைகளை கலக்க வேண்டாம்",
+  "tipTitle": "💡 குறிப்புகள்:",
+  "tipBody": "எங்கள் AI மிகவும் துல்லியமானது. இதே பொருளின் படங்களே என்றால், தெளிவான மற்றும் ஒரே விதமான ஒளியுடன் படங்களை எடுத்து முக்கிய அம்சங்கள் எல்லாம் தெரியும் வகையில் எடுக்கவும்.",
+  "gotIt": "புரிந்தது",
+  "selectNewImages": "புதிய படங்களைத் தேர்ந்தெடுக்கவும்",
+  "failedToUploadAiEnhancedImage": "❌ AI மேம்படுத்திய படத்தை பதிவேற்ற முடியவில்லை: {error}",
+  "permissionDeniedCheckAccount": "அனுமதி மறுக்கப்பட்டது. உங்கள் கணக்கு அனுமதிகளைச் சரிபார்க்கவும்.",
+  "storageQuotaExceededContactSupport": "சேமிப்பு அளவு மீறப்பட்டது. ஆதரவுடன் தொடர்புகொள்ளவும்.",
+  "deletingAudioStory": "ஆடியோ கதையை நீக்குகிறது...",
+  "allowedImageFormatsJpgPngWebp": "JPG, PNG அல்லது WebP பட வடிவங்களையே பயன்படுத்தவும்.",
+  "selectBuyerDisplayImage": "வாங்குபவருக்கான காட்சி படத்தைத் தேர்வுசெய்க",
+  "chooseImageForMarketplace": "சந்தையில் வாங்குபவர்களுக்கு காட்டப்படும் ஒரு படத்தைத் தேர்ந்தெடுக்கவும்:",
+  "selectFromUploadedImages": "பதிவேற்றிய படங்களில் இருந்து தேர்ந்தெடுக்கவும்:",
+  "selectedBuyerDisplayImage": "தேர்ந்தெடுக்கப்பட்ட காட்சி படம்:",
+  "aiGeneratedBuyerDisplayImage": "AI உருவாக்கிய காட்சி படம்:",
+  "save": "சேமிக்க",
+  "tapToSelectThisAiImage": "இந்த AI மேம்படுத்திய படத்தைத் தேர்வுசெய்ய தட்டவும்",
+  "aiImageSelectedForProduct": "✨ உங்கள் பொருளுக்கு AI மேம்படுத்திய படம் தேர்வுசெய்யப்பட்டது!",
+  "aiImageSelectedCheck": "✓ AI படம் தேர்ந்தெடுக்கப்பட்டது",
+  "useAiEnhancedImage": "AI மேம்படுத்திய படத்தைப் பயன்படுத்தவும்",
+  "uploadingEllipsis": "பதிவேற்றப்படுகிறது...",
+  "uploadDisplayImage": "காட்சி படத்தை பதிவேற்று",
+  "uploadDifferentImage": "வேறு படத்தை பதிவேற்று",
+  "textBasedImageEditing": "✨ உரை-அடிப்படையிலான படத் திருத்தம்",
+  "describeHowToModifyImage": "இயற்கை மொழியைப் பயன்படுத்தி உங்கள் படத்தை எவ்வாறு மாற்ற விரும்புகிறீர்கள் என்பதை விவரிக்கவும்:",
+  "promptHintExamples": "உ.மா., \"பின்னணியை மேலும் பிரகாசமாகவும் தொழில்முறையாகவும் செய்யுங்கள்\" அல்லது \"பொருளை சிறப்பாகக் காட்ட ஒளியைக் கூட்டுங்கள்\"",
+  "promptChipProfessionalLighting": "தொழில்முறை ஒளியீடு",
+  "promptChipBrighterBackground": "மேலும் பிரகாசமான பின்னணி",
+  "promptChipMoreVibrantColors": "மேலும் உற்சாகமான நிறங்கள்",
+  "promptChipRemoveDistractions": "தடைகளை அகற்று",
+  "promptChipStudioQuality": "ஸ்டூடியோ தரம்",
+  "applyingChanges": "மாற்றங்கள் பயன்படுத்தப்படுகின்றன...",
+  "applyTextBasedEditing": "உரை-அடிப்படையிலான திருத்தத்தை பயன்படுத்து",
+  "tipBeSpecificForAI": "நீங்கள் மாற்ற விரும்புவது குறித்து துல்லியமாக இருங்கள். தெளிவான, விளக்கமான அறிவுறுத்தல்களுடன் AI சிறப்பாக செயல்படும்.",
+  "infoSelectUploadedOrDifferentIfSkipFirst": "நீங்கள் பதிவேற்றிய படங்களில் ஒன்றைத் தேர்ந்தெடுக்கவும் அல்லது வேறு ஒன்றை பதிவேற்றவும். நீங்கள் தவிர்த்தால், முதல் பதிவேற்றிய படம் பயன்படுத்தப்படும்.",
+  "infoThisWillBeMainDisplay": "இந்த படம் வாங்குபவர்களுக்கு காட்டப்படும் முக்கிய படம். நீங்கள் பதிவேற்றிய படங்களைப் பயன்படுத்த விரும்பினால் இதைத் தவிர்க்கலாம்.",
+  "skipAndContinue": "தவிர்த்து தொடரவும்",
+  "listProduct": "பொருளை பட்டியலிடு",
+  "audioStoryDeletedSuccessfully": "ஆடியோ கதை வெற்றிகரமாக நீக்கப்பட்டது!",
+  "enhancementStyle": "🎨 மேம்பாட்டு பாணி:",
+  "enhancementStyleProfessional": "💼 தொழில்முறை",
+  "enhancementStyleVibrant": "🌈 உற்சாகமான",
+  "enhancementStyleMinimalist": "✨ எளிமையான",
+  "enhancementStyleLifestyle": "🏠 வாழ்க்கை முறை",
+  "enhanceWithAiNanoBanana": "🍌 AI உடன் மேம்படுத்து (Nano-Banana)",
+  "processingWithBanana": "🍌 செயலாக்கப்படுகிறது...",
+  "aiEnhanceImageInfo": "இது தொழில்முறை சந்தை காட்சிக்காக AI ஐ பயன்படுத்தி உங்கள் படத்தை மேம்படுத்தும்",
+  "productUpdatedLiveMessage": "உங்கள் பொருள் புதுப்பிக்கப்பட்டு மாற்றங்கள் இப்போது சந்தையில் நேரலையில் உள்ளன!",
+  "productNowLiveMessage": "உங்கள் பொருள் இப்போது சந்தையில் நேரலையில் உள்ளது மற்றும் வாங்குபவர்களால் கண்டுபிடிக்கப்படலாம்!",
+  "viewMyProducts": "என் பொருட்களைப் பார்க்க",
+  "createAnother": "இன்னொன்று உருவாக்க",
+  "done": "முடிந்தது"
 }
